--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -1,2 +1,3 @@
 $white: #FFFFFF;
 $black: #000000;
+$bg-grey: #EEEEEE;
